2010-01-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/login.php: Added a new way to do admin authentication:
	verify user locally but verify password on AD server. Commented out by
	default but could be enabled
	Also added a TODO task

	* Added
	pf/addons/high-availability/heartbeat-2.x-drbd-8.3-support-fix.patch:
	Patch required for heartbeat 2.x and drbd 8.3 compatibility. Took from
	http://hg.linux-ha.org/dev/rev/6467be4d4cb7

	* pf/lib/pf/pfcmd.pm: Now accepting @ in a person's pid

	* pf/lib/pf/person.pm: Removed debugging code that was left out by
	mistake it would seem

2010-01-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/NEWS, pf/UPGRADE, pf/packetfence.spec, pf/conf/pf-release,
	pf/t/pfcmd.t, pf/docs/PacketFence_Administration_Guide.odt,
	pf/docs/PacketFence_Developers_Guide.odt,
	pf/docs/PacketFence_Installation_Guide.odt,
	pf/docs/PacketFenceZEN_Installation_Guide.odt: 
	Version bump to 1.8.7
	Copyright bump to 2010 in documentation

2009-12-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/user/content/templates/register_1.html: Fixed missing
	closing html tags

2009-12-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/login.php: Fixed "username" Cross-Site Scripting
	Vulnerability as reported by Secunia advisory 37844 available at:
	http://secunia.com/advisories/37844/. Fixes #884;
	http://www.packetfence.org/mantis/view.php?id=884

2009-12-17	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Added perl-LWP-UserAgent-Determined as a 
	dependency of remote-snort-sensor. Fixes #882;
	http://www.packetfence.org/mantis/view.php?id=882

	* pf/packetfence.spec: Added perl-SOAP-Lite as a dependency of 
	remote-snort-sensor. Fixes #881;
	http://www.packetfence.org/mantis/view.php?id=881

2009-12-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan.pm: We no longer act on wireless deauthentication
	traps. Fixes #880;
	http://www.packetfence.org/mantis/view.php?id=880
